Fix text alignment on grid items on landing page. Fix headers. Enlarge image.

--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -13,11 +13,16 @@ h1 {
   font-weight: 700;
   margin: 0 auto;
   height: 7vh;
+  width: 90vw;
+  text-align: center;
+
 }
 
 h2 {
   margin: 0 auto;
   height: 5vh;
+  width: 90vw;
+  text-align: center;
 }
 
 .container {
@@ -33,32 +38,37 @@ h2 {
 .item-a {
   grid-column: 1;
   grid-row: 1 / 3;
-  border: 1px solid white;
+  border-right: 1px dotted white;
+  padding-right: 1vw;
+  text-align: right;
 }
 
 .item-b {
   grid-column: 2;
   grid-row: 1 / 3;
-  border: 1px solid white;
+  padding-right: 1vw;
+  text-align: right;
 }
 
 img {
   grid-column: 3;
   grid-row: 1 / 3;
   align-self: center;
-  border: 1px solid white;
 }
 
 .item-d {
   grid-column: 4;
   grid-row: 1 / 3;
-  border: 1px solid white;
+  padding-left: 1vw;
+  text-align: left;
 }
 
 .item-e {
   grid-column: 5;
   grid-row: 1 / 3;
-  border: 1px solid white;
+  border-left: 1px dotted white;
+  padding-left: 1vw;
+  text-align: left;
 }
 
 .prompt {
